<resources>
    <string name="app_name">Serviceu</string>
    <string name="todo"></string>
    <string name="fullname">ABCD EFGHIJK</string>
    <string name="email">qwerty@gmail.com</string>
    <string name="emailHint">Email</string>
    <string name="phonenumberHint">000-000-0000-000</string>
    <string name="addressHint">Address</string>
    <string name="logout">Logout</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="confirm_logout">CONFIRM LOGOUT</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="nameshow">ABCD EFGHIJKL</string>
    <string name="date_and_time">Date and Time</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="proceed">Proceed</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_complete_address">Enter your complete address</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="customer">Customer</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="service_provider">Service Provider</string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_63">+63</string>
    <string name="services">Services</string>
    <string name="laundry">LAUNDRY</string>
    <string name="service_providers">Service Providers</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="book">Book</string>
    <string name="service">Service</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="no_bookings_yet">No Bookings Yet...</string>
</resources>