<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="220dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/todo" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="TextSizeCheck" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        >
        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_marginEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:autofillHints="" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_EmailAddress"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/fredokaregular"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/fredokasemibold"
            android:text="@string/_63"
            android:textColorHint="@color/black"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="TextFields"
            android:autofillHints="" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rb_gender"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/male"
            android:textSize="16sp"
            />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/female"
            android:textSize="16sp"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/et_City"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/fredokaregular"
        android:hint="@string/enter_your_complete_address"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rb_role"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rb_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/customer"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_serviceProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/service_provider"
            android:textSize="16sp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:autofillHints="" />


        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/lightblue"
            android:fontFamily="@font/fredokaregular"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_createAccount"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/fredokasemibold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tv_loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>