<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/profileView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/profile"
        android:textColor="@color/eerieblack"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/profileround"
        android:backgroundTint="#b3d8f5"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/baseline_person_outline_24"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/sampleprofile" />

    <TextView
        android:id="@+id/userFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/fullname"
        android:textColor="@color/eerieblack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/fredokaregular"
        android:padding="15dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/eerieblack"
        android:textSize="15sp"
        tools:ignore="RtlCompat"
        app:drawableLeftCompat="@drawable/baseline_mail_outline_24" />

    <TextView
        android:id="@+id/userPhone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"

        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/fredokaregular"
        android:padding="15dp"
        android:text="@string/phonenumberHint"
        android:textAlignment="center"
        android:textColor="@color/eerieblack"
        android:textSize="15sp"
        tools:ignore="RtlCompat"
        app:drawableLeftCompat="@drawable/baseline_phone_24" />

    <TextView
        android:id="@+id/userAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:fontFamily="@font/fredokaregular"
        android:padding="15dp"
        android:text="@string/addressHint"
        android:textAlignment="center"
        android:textColor="@color/eerieblack"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/baseline_location_on_24"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/faintred"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/logout"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
