<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Book">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/tv_top_book"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/book"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="35sp"
        android:textColor="@color/eerieblack"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundsquare"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/name"
        android:padding="10dp"
        android:textSize="20sp"
        />



    <TextView
        android:id="@+id/tv_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/service"
        android:textSize="20sp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/service"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/roundsquare"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/service"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_marginRight="150dp"
            />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/tv_dateDisplay"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/roundsquare"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/date"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/tv_timeDisplay"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/roundsquare"
            android:fontFamily="@font/fredokaregular"
            android:text="@string/time"
            android:gravity="center"
            android:textSize="20sp"
            />

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_datetimePicker"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/select_date_and_time"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_proceed"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/proceed"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


</LinearLayout>