<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/fredokasemibold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <EditText

        android:id="@+id/email"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@+id/login"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/fredokaregular"
        android:layout_marginBottom="30dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@+id/email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/fredokaregular"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/lightblue"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/fredokasemibold"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        app:backgroundTint="@color/blue" />



</RelativeLayout>